package cn.tunyl.creational.abstractfactory;

public class Dessert {
    public void show() {
        System.out.println("dessert");
    }
}
