package cn.tunyl.creational.abstractfactory;

public interface DessertFactory {
    Coffee createCoffee();
    Dessert createDessert();
}
