package cn.tunyl.creational.abstractfactory;

public class MatchaMousse extends Dessert{
    public void show() {
        System.out.println("MatchaMousse dessert");

    }
}
