package cn.tunyl.creational.abstractfactory;

public class Triamisu extends  Dessert{
    @Override
    public void show() {
        System.out.println("Triamisu Dessert");
    }
}
