package cn.tunyl.creational.factroymethod;

public class LatteCoffee extends Coffee{
    @Override
    public String getName() {
        return "Latte Coffee";
    }
}
